--- a/contaxt.html
+++ b/contaxt.html
@@ -85,36 +85,51 @@
         
         <div class="body-box contaxt-section">
             <div class="container grid wide">
-                <h4 class="text-center header-recommend">Giới Thiệu</h4>
                 <div class="contaxt-box">
-                    <div class="row height-center">
-                        <div class="col l-6 c-0">
-                            <div class="box-image">
-                                <img src="assets/images/about-2.png" alt="" class="full-size-img">
-                            </div>
-                        </div>
-                        <div class="col l-6 c-12">
-                            <div class="left-contaxt-box ">
-                                <h4 class="contaxt-header text-center">Nhà hàng Miaow Pizza</h4>
-                                <p class="recommend-content"> Pizza bắt nguồn từ nước Ý, là một trong những món ăn có từ rất lâu đời cho đến nay, vẫn là niềm tự hào và là nét đặc trưng riêng của nước Ý. Ngày nay, cùng với sự bùng nổ của sự phát triển kinh tế và du lịch, việc trao đổi giới thiệu văn hóa giữa các nước với nhau đã trở nên rất bình thường và phổ biến. Chính sự trao đổi văn hóa ấy đã góp công lớn cho việc đưa Pizza vượt ra khỏi lãnh thổ nước Ý, để được giới thiệu rộng rãi đi khắp mọi nơi trên thế giới, để ai cũng có thể biết đến và thưởng thức món ăn hấp dẫn này.</p>
-                                <p class="recommend-content"> Đối lập với những món ăn cầu kỳ của người Pháp, hầu hết món ăn của người Ý rất đơn giản, vị mặn hoặc nhàn nhạt. Vì thế, để món ăn của Ý được đậm đà hơn, ngon hơn nhưng vẫn giữ được hương vị đặc trưng của món ăn và phù hợp với khẩu vị của người Việt. Chúng tôi đã dành rất nhiều công sức, cũng như tâm huyết để tìm ra công thức chế biến món ăn hoàn toàn mới, mang nét đặc trưng riêng cho Miaow Pizza.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row ">
-                        <div class="col l-6 c-12">
+                    <div class="row">
+                        <div class="col l-8 c-12">
                             <div class="left-contaxt-box mr--12 ">
-                               <p class="recommend-content">Khác với các loại Pizza công nghiệp, bánh Miaow Pizza được làm hoàn toàn thủ công, từ khâu nhồi bột, ủ bột cho đến se bột bằng tay. Bánh pizza làm thủ công khi nướng ra lò sẽ có hình dáng bánh lồi lõm tự nhiên, với vỏ bánh Pizza ngon giòn xốp đặc trưng, ngoài ra còn có vị dai nhẹ từ bột mỳ được nhồi kỹ lưỡng. Pizza thủ công tại Miaow Pizza luôn được chế biến từ những nguyên liệu tươi ngon nhất, gia giảm tối đa các loại nguyên liệu béo nhằm đem đến cho khách hàng một bữa ăn chất lượng và tốt nhất cho sức khỏe. Trải qua hơn 5 năm hoạt động, Miaow Pizza không ngừng nâng cao về chất lượng sản phẩm, nhằm đem đến một khái niệm mới cho khách hàng về Pizza. Pizza tại đây không còn là những loại thức ăn nhanh công nghiệp nữa mà là những món ăn ngon, bổ dưỡng, tốt cho sức khỏe và hoàn toàn phù hợp để có mặt trong thực đơn mỗi ngày của mọi Gia Đình.</p>
-                               <p class="recommend-content"> Miaow Pizza là sự kết hợp tinh tế, hài hòa giữa công thức truyền thống của đầu bếp Ý với nguyên liệu tươi ngon của Việt Nam. Đến với Miaow Pizza quý khách sẽ được thưởng thức những chiếc Pizza luôn nóng hổi, hương vị thơm ngon đậm đà, đặc trưng của ‹100% Pizza Tươi›.</p>
-                               <p class="recommend-content">Nếu còn đang băn khoăn chưa biết nên thưởng thức pizza ở đâu, đừng ngại ghé các cơ sở của Miaow Pizza  để trải nghiệm pizza kiểu Nhật và vô vàn những món hấp dẫn khác nhé!</p>
-                            </div>  
-                        </div>
-                        <div class="col l-6 c-0">
-                            <div class="box-image">
-                                <img src="assets/images/orderform-bg.jpg" alt="" class="full-size-img">
+                                <h4 class="contaxt-header text-center">Liên hệ với chúng tôi</h4>
+                                <div class="contaxt-form">
+                                    <div class="row">
+                                        <div class="col l-6 p-3 c-12">
+                                            <fieldset>
+                                                <label for="" class="form-contaxt-label">Họ và Tên </label>
+                                                <input type="text" placeholder="Nhập tên của bạn" class="form-control form-value">
+                                            </fieldset>
+                                            <fieldset>
+                                                <label for="" class="form-contaxt-label">Số điện thoại </label>
+                                                <input type="text" placeholder="Nhập số điện thoại của bạn" class="form-control form-value">
+                                            </fieldset>
+                                        </div>
+                                        <div class="col l-6 p-3 c-12">
+                                            <fieldset>
+                                                <label for="" class="form-contaxt-label">Email </label>
+                                                <input type="text" placeholder="Nhập email của bạn" class="form-control form-value">
+                                            </fieldset>
+                                            <fieldset>
+                                                <label for="" class="form-contaxt-label">Tiêu đề </label>
+                                                <input type="text" placeholder="Nhập tiêu đề" class="form-control form-value">
+                                            </fieldset>
+                                        </div>
+                                        <div class="col l-12 p-3 c-12">
+                                            <fieldset>
+                                                <label for="" class="">Nội dung </label>
+                                                <textarea name="" placeholder="Nhập nội dung cần gửi" class="form-control form-value" id="" rows="3"></textarea>
+                                            </fieldset>
+                                        </div>
+                                    </div>
+                                    <div class="button-box">
+                                        <button class="btn btn-danger btn-send font-weight-bold btn-font-16">Gửi </button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        
+                        <div class="col l-4 c-0">
+                            <div class="box-image">
+                                <img src="assets/images/hinh-lien-he-3.jpg" alt="" class="full-size-img">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
