--- a/drink-water.html
+++ b/drink-water.html
@@ -49,7 +49,7 @@
                         <a href="contaxt.html" class="header-nav-link">
                             <li class="header-nav-item">Liên hệ</li>
                         </a>
-                        <a href="" class="header-nav-link">
+                        <a href="shopping_cart.html" class="header-nav-link">
                             <li class="header-nav-item">Giỏ hàng</li>
                         </a>
                     </div>
